    - Fix for StyleScrollBar to properly display the new bitmaps
    - Fix for several classes to properly use the DPI changes per monitor
    - Changed the use of GetSystemMetrics to GetSystemMetricsForDpi where needed
3)  TAKE ACTION:
    - Re-implement your resource file numbers between 135 and 200 for the new scrollbar bitmaps
      So review your resource.h file for this number range

VERSION 1.2.0 of 07-11-2025
---------------------------
1)  This version supports High DPI and multiple monitors with different DPI settings
    To convert a program, add the "Manifest.xml" file to your project in the project settings
    in the "Manifest Tool" section. This sets the DPI-awareness to "Per Monitor v2".
    Turn off all other DPI settings in the project settings.
2)  The Multi-monitor capabilites are implemented in the StyleDialog and StyleFrameWnd(Ex) classes.
    They will automatically adjust their scaling when moved to another monitor with a different DPI.
3)  The following Multi-monitor messages are handled automatically:
    WM_GETDPISCALEDSIZE         -> Get the scaled size of the window for the current DPI (Sent first)
    WM_DPICHANGED_BEFOREPARENT  -> Sent to all the controls before the parent is resized
    WM_DPICHANGED               -> Sent to parent, resizing takes place here
    WM_DPICHANGED_AFTERPARENT   -> Sent to all the controls after the parent is resized
    WM_DISPLAYCHANGE            -> Sent when a monitor is added/removed or resolution changed

    BEWARE: It may be needed to override and handle some of these messages in your own code

4)  The source directory (StyleFramework) contains a file "Manifest.xml" that you can include in 
    your application project directory in order to set the "MonitorV2" manifest. Also see under 1)
    In addition you can remove the standard linker comment section in your "stdafx.h" file to
    add the comctrl version 6.0 manifestdependency. It is already included in the manifest.xml file.
